<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/rootTags"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_fullName"
        style="@style/views"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        style="@style/card"
        app:layout_constraintBottom_toBottomOf="@+id/view_fullName"
        app:layout_constraintEnd_toEndOf="@+id/view_fullName"
        app:layout_constraintStart_toStartOf="@+id/view_fullName"
        app:layout_constraintTop_toTopOf="@+id/view_fullName">

        <TextView
            android:id="@+id/textView_show_fullName"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_fullName" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_userName"
        style="@style/views"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_fullName" />

    <androidx.cardview.widget.CardView
        style="@style/card"
        app:layout_constraintBottom_toBottomOf="@+id/view_userName"
        app:layout_constraintEnd_toEndOf="@+id/view_userName"
        app:layout_constraintStart_toStartOf="@+id/view_userName"
        app:layout_constraintTop_toTopOf="@+id/view_userName">

        <TextView
            android:id="@+id/textView_show_userName"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_userName" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_email"
        style="@style/views"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_userName" />

    <androidx.cardview.widget.CardView
        style="@style/card"
        app:layout_constraintBottom_toBottomOf="@+id/view_email"
        app:layout_constraintEnd_toEndOf="@+id/view_email"
        app:layout_constraintStart_toStartOf="@+id/view_email"
        app:layout_constraintTop_toTopOf="@+id/view_email">

        <TextView
            android:id="@+id/textView_show_email"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_email" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_password"
        style="@style/views"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_email" />

    <androidx.cardview.widget.CardView
        style="@style/card"
        app:layout_constraintBottom_toBottomOf="@+id/view_password"
        app:layout_constraintEnd_toEndOf="@+id/view_password"
        app:layout_constraintStart_toStartOf="@+id/view_password"
        app:layout_constraintTop_toTopOf="@+id/view_password">

        <TextView
            android:id="@+id/textView_show_password"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_password" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_gender"
        style="@style/views"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_password" />

    <androidx.cardview.widget.CardView
        style="@style/card"
        app:layout_constraintBottom_toBottomOf="@+id/view_gender"
        app:layout_constraintEnd_toEndOf="@+id/view_gender"
        app:layout_constraintStart_toStartOf="@+id/view_gender"
        app:layout_constraintTop_toTopOf="@+id/view_gender">

        <TextView
            android:id="@+id/textView_show_gender"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_gender" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_save"
        style="@style/views"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_gender" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_value"
        style="@style/buttons"
        android:layout_width="0dp"
        android:backgroundTint="@color/sasquatch_socks_500"
        android:text="@string/text_save"
        app:layout_constraintEnd_toEndOf="@id/view_save"
        app:layout_constraintStart_toStartOf="@id/view_save"
        app:layout_constraintTop_toTopOf="@id/view_save" />


</androidx.constraintlayout.widget.ConstraintLayout>